--- a/LojaVirtual/Views/Home/Contato.cshtml
+++ b/LojaVirtual/Views/Home/Contato.cshtml
@@ -35,43 +35,42 @@
             <aside class="col-sm-6">
 
                 <h4 class="subtitle-doc">
-                    # Contato
-                    <a href="#" data-html="code_payment" class="showcode">[code]</a>
+                    # Contato                    
                 </h4>
-                <div id="code_payment">
+                <div>
 
                     <article class="card">
                         <div class="card-body p-5">
                             <p class="alert alert-success">Mensagem de sucesso!</p>
 
-                            <form role="form">
+                            <form role="form" method="post" action="/Home/ContatoAcao">
                                 <div class="form-group">
-                                    <label for="username">Nome</label>
+                                    <label for="nome">Nome</label>
                                     <div class="input-group">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fa fa-user"></i></span>
                                         </div>
-                                        <input type="text" class="form-control" name="username" placeholder=""
+                                        <input type="text" id="nome" class="form-control" name="nome" placeholder=""
                                                required="">
                                     </div> <!-- input-group.// -->
                                 </div> <!-- form-group.// -->
 
                                 <div class="form-group">
-                                    <label for="cardNumber">E-mail</label>
+                                    <label for="email">E-mail</label>
                                     <div class="input-group">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fa fa-at"></i></span>
                                         </div>
-                                        <input type="text" class="form-control" name="cardNumber" placeholder="">
+                                        <input type="text" id="email" class="form-control" name="email" placeholder="">
                                     </div> <!-- input-group.// -->
                                 </div> <!-- form-group.// -->
 
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="form-group">
-                                            <label><span class="hidden-xs">Texto</span> </label>
+                                            <label for="texto"><span class="hidden-xs">Texto</span> </label>
                                             <div class="form-inline">
-                                                <textarea class="form-control" style="width:100%"></textarea>
+                                                <textarea id="texto" class="form-control" name="texto" style="width:100%"></textarea>
 
                                             </div>
                                         </div>
