--- a/LojaVirtual/Views/Home/Contato.cshtml
+++ b/LojaVirtual/Views/Home/Contato.cshtml
@@ -76,7 +76,7 @@
                                         </div>
                                     </div>
                                 </div> <!-- row.// -->
-                                <button class="subscribe btn btn-primary btn-block" type="button"> Enviar </button>
+                                <button class="subscribe btn btn-primary btn-block" type="submit"> Enviar </button>
                             </form>
                         </div> <!-- card-body.// -->
                     </article> <!-- card.// -->
