--- a/LojaVirtual/Views/Home/Contato.cshtml
+++ b/LojaVirtual/Views/Home/Contato.cshtml
@@ -45,6 +45,10 @@
                             {
                                 <p class="alert alert-success">@ViewData["MSG_S"]</p>
                             }
+                            @if (ViewData["MSG_E"] != null)
+                            {
+                                <p class="alert alert-danger">@ViewData["MSG_E"]</p>
+                            }
                             <form role="form" method="post" action="/Home/ContatoAcao">
                                 <div class="form-group">
                                     <label for="nome">Nome</label>
