--- a/LojaVirtual/Views/Home/Contato.cshtml
+++ b/LojaVirtual/Views/Home/Contato.cshtml
@@ -47,7 +47,7 @@
                             }
                             @if (ViewData["MSG_E"] != null)
                             {
-                                <p class="alert alert-danger">@ViewData["MSG_E"]</p>
+                                <p class="alert alert-danger">@Html.Raw(ViewData["MSG_E"])</p>
                             }
                             <form role="form" method="post" action="/Home/ContatoAcao">
                                 <div class="form-group">
