--- a/LojaVirtual/Views/Home/Contato.cshtml
+++ b/LojaVirtual/Views/Home/Contato.cshtml
@@ -3,6 +3,8 @@
 *@
 @{
     Layout = "_Layout";
+    ViewData["Title"] = "Contato";
+    LojaVirtual.Models.Contato contato = (LojaVirtual.Models.Contato) ViewData["CONTATO"];
 }
 
 <main role="main">
@@ -57,7 +59,7 @@
                                             <span class="input-group-text"><i class="fa fa-user"></i></span>
                                         </div>
                                         <input type="text" id="nome" class="form-control" name="nome" placeholder=""
-                                               required="">
+                                               required="" value="@(contato != null ? contato.Nome : "")">
                                     </div> <!-- input-group.// -->
                                 </div> <!-- form-group.// -->
 
@@ -67,7 +69,8 @@
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fa fa-at"></i></span>
                                         </div>
-                                        <input type="text" id="email" class="form-control" name="email" placeholder="">
+                                        <input type="text" id="email" class="form-control" name="email" placeholder=""
+                                               value="@(contato != null ? contato.Email : "")">
                                     </div> <!-- input-group.// -->
                                 </div> <!-- form-group.// -->
 
@@ -76,7 +79,8 @@
                                         <div class="form-group">
                                             <label for="texto"><span class="hidden-xs">Texto</span> </label>
                                             <div class="form-inline">
-                                                <textarea id="texto" class="form-control" name="texto" style="width:100%"></textarea>
+                                                <textarea id="texto" class="form-control" name="texto" 
+                                                          style="width:100%">@(contato != null ? contato.Texto : "")</textarea>
 
                                             </div>
                                         </div>
