--- a/LojaVirtual/Views/Home/Index.cshtml
+++ b/LojaVirtual/Views/Home/Index.cshtml
@@ -162,3 +162,25 @@
         </div> <!-- row.// -->
     </div>    
 </main>
+<form role="form" method="post" action="/Home/ContatoAcao">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 offset-sm-1">
+                <div class="form-group">
+                    <label for="nome">Cadastre seu e-mail para receber promoções:</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+                        </div>
+                        <input type="text" id="nome" class="form-control" name="nome" placeholder=""
+                               required="" value="">
+                    </div> <!-- input-group.// -->
+                </div> <!-- form-group.// -->
+            </div>           
+            <div class="col-sm-2">
+                <br />
+                <button class="subscribe btn btn-primary btn-block" type="submit"> Enviar </button>
+            </div>
+        </div>
+    </div>
+ </form>
